# Multi-Agent-Code-Stabilizer

./: .dockerignore  .env  .env.example  .gitignore  .replit  ADVERSARIAL_REVIEW.md  BILLION_DOLLAR_ROADMAP.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-3.md  README.md  REPOSITORY_ANALYSIS_REPORT.md  SECURITY.md  default.toml  docker-compose.demo.yml  docker-compose.yml  env.txt  pyproject.toml  pyproject.toml.txt  replit.md  requirements.txt  run.py
.agents/: agent_assets_metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  fix-tests.yml  tests.yml
agents/: adversarial_critic.py  auditor.py  base.py  fixer.py  formal_verifier.py  localization_agent.py  mutation_verifier.py  patch_synthesis_agent.py  patrol.py  planner.py  reader.py  reviewer.py  synthesis_agent.py  test_generator.py  test_runner.py  test_runner_universal.py
api/: app.py  manager.py
api/routes/: auth.py  commits.py  compound_findings.py  escalations.py  federation.py  files.py  fixes.py  github_webhook.py  issues.py  refactor_proposals.py  runs.py  upload.py
api/websocket/: manager.py
auth/: jwt_middleware.py
brain/: brain_postgres_storage.py  brain_sqlite_storage.py  brain_storage.py  graph.py  hybrid_retriever.py  migrations.py  postgres_storage.py  schemas.py  sqlite_storage.py  storage.py  vector_store.py
compliance/: rtm_exporter.py  sas_generator.py
config/: default.toml  default.toml.txt  loader.py
config/prompts/: adversarial.md  base.md  os_safety.md
context/: repo_map.py
cpg/: __init__.py  context_selector.py  cpg_engine.py  generated_code_filter.py  idl_preprocessor.py  incremental_updater.py  jni_bridge_tracker.py  joern_client.py  program_slicer.py  service_boundary_tracker.py  shard_manager.py
disclosure/: security_advisory.py
discovery/: full_pipeline.py  repo_hunter.py
docs/: CONTRIBUTING.md  architecture.md  gap1_cpg_architecture.md  gap2_synthesis_architecture.md  gap6_federation.md  prometheus.yml
escalation/: human_escalation.py
github_integration/: __init__.py  pr_manager.py
intelligence/: osv_correlator.py
mcp_clients/: __init__.py  manager.py  mcp_manager.py
memory/: federated_store.py  fix_memory.py  helixdb.py  openviking.py  pattern_normalizer.py
metrics/: langsmith_tracer.py  prometheus_exporter.py
models/: router.py
orchestrator/: commit_audit_scheduler.py  consensus.py  controller-1.py  controller.py  controller_helpers.py  convergence.py  patch_transaction.py
plugins/: base.py  plugins_base.py
plugins/builtins/: no_secrets.py
rust/mcp_server/: Cargo.toml
rust/mcp_server/src/: main.rs
sandbox/: ast_rewrite.py  executor.py
scripts/: arpo_trainer.py  benchmark.py  bootstrap_brain.py  cli.py  run_one_cycle.py  setup_joern.sh
security/: aegis.py
startup/: feature_matrix.py
swarm/: autogen_agents.py  crew_roles.py  deerflow_orchestrator.py  hf_skills.py  langgraph_state.py
swe_bench/: bobn_sampler.py  evaluator.py  execution_loop.py  localization.py  terminal_bench.py  trajectory_collector.py
tests/: conftest.py
tests/integration/: test_gap5_live.py  test_llm_e2e.py  test_pipeline.py
tests/unit/: test_adversarial_critic.py  test_agents.py  test_ast_rewrite.py  test_audit_trail.py  test_bobn_sampler.py  test_brain.py  test_celery_tasks.py  test_chunking.py  test_compliance.py  test_config_defaults.py  test_config_loader.py  test_consensus.py  test_controller_deerflow.py  test_convergence.py  test_convergence_loop.py  test_cpg.py  test_execution_feedback.py  test_executor.py  test_feature_matrix.py  test_fix_memory.py  test_fixer_agent.py  test_formal_verifier.py  test_gap3_fixer_world_model.py  test_gap4_integration.py  test_gap5_independence.py  test_gap5_swarm_intelligence.py  test_gap6_federation.py  test_github_webhook.py  test_graph.py  test_human_escalation.py  test_independence_enforcer.py  test_jwt_middleware.py  test_litellm_timeouts.py  test_model_router.py  test_patch_synthesis_agent.py  test_patch_transaction.py  test_patch_transaction_conflicts.py  test_patrol_agent.py  test_pattern_normalizer.py  test_planner_agent.py  (+12 more)
tools/: toolhive.py
tools/servers/: afl_server.py  antigravity_server.py  aurite_server.py  codeql_server.py  cve_server.py  huggingface_skills_server.py  infer_server.py  joern_server.py  jujutsu_server.py  ldra_polyspace_server.py  mariana_trench_server.py  mirofish_server.py  nuclei_server.py  openviking_server.py  promptfoo_server.py  sbom_server.py  semgrep_server.py  trufflehog_server.py
ui/: index.html
utils/: audit_trail.py  chunking.py  rate_limiter.py
verification/: independence_enforcer.py  leanstral.py  model_registry.yaml
workers/: celery_app.py  tasks.py
