[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rhodawk-ai-code-stabilizer"
version = "1.0.0"
description = "Autonomous Multi-Agent Code Stabilizer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "RHODAWK AI CODE STABILIZER Contributors" }]
keywords = ["ai", "agents", "code-review", "autonomous", "llm", "stabilizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    # LLM
    "anthropic>=0.40.0",
    "litellm>=1.50.0",
    "openai>=1.50.0",
    # Structured outputs
    "instructor>=1.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Database
    "aiosqlite>=0.20.0",
    # Code analysis (optional tree-sitter — falls back to regex)
    "tree-sitter>=0.23.0; python_version>='3.11'",
    "tree-sitter-python>=0.23.0; python_version>='3.11'",
    # GitHub
    "PyGithub>=2.3.0",
    "gitpython>=3.1.43",
    # MCP (optional — falls back to direct I/O)
    "mcp>=1.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Config
    "tomli>=2.0.1; python_version<'3.11'",
    "python-dotenv>=1.0.0",
    # HTTP / retry
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
    "faker>=25.0.0",
]

[project.scripts]
rhodawk-ai-code-stabilizer = "scripts.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
