[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name        = "multi-agent-code-stabilizer"
version     = "0.3.0"
description = "MACS — Autonomous Multi-Agent Code Stabilizer with GII architecture"
readme      = "README.md"
requires-python = ">=3.11"
license     = { text = "MIT" }
keywords    = ["ai", "code-quality", "multi-agent", "gii", "autonomous"]

dependencies = [
    # ── Core LLM / agent stack ────────────────────────────────────────────
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "anthropic>=0.31.0",
    "openai>=1.40.0",

    # ── Data validation ───────────────────────────────────────────────────
    "pydantic>=2.7.0",

    # ── Database / storage ────────────────────────────────────────────────
    "aiosqlite>=0.20.0",

    # ── Web / API ─────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # ── CLI ───────────────────────────────────────────────────────────────
    "typer>=0.12.0",
    "rich>=13.7.0",

    # ── Environment ───────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",  # stdlib tomllib available in 3.11+

    # ── GitHub ────────────────────────────────────────────────────────────
    "PyGithub>=2.3.0",

    # ── Source parsing ────────────────────────────────────────────────────
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=0.1.0",    # GAP-6: multi-language syntax gate

    # ── Dependency graph (GAP-1) ──────────────────────────────────────────
    "networkx>=3.3.0",
    "pyan3>=1.1.1",                        # Python call-graph extraction (optional)

    # ── Vector store (GAP-8) ──────────────────────────────────────────────
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # ── Formal verification (GAP-4) ───────────────────────────────────────
    "z3-solver>=4.13.0",

    # ── Static analysis tools ─────────────────────────────────────────────
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",

    # ── Resilience ────────────────────────────────────────────────────────
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
]
neo4j = [
    "neo4j>=5.20.0",
]
semgrep = [
    "semgrep>=1.70.0",
]

[project.scripts]
rhodawk-ai-code-stabilizer = "scripts.cli:app"
macs                       = "scripts.cli:app"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
timeout         = 120
addopts         = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length    = 100
select         = ["E", "F", "W", "B", "I", "UP"]
ignore         = ["E501", "B008", "B904"]
exclude        = [".venv", "__pycache__", "*.pyc", "build", "dist"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_return_any        = true
disallow_untyped_defs  = false
strict_optional        = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B101"]   # assert is fine in test files
