[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name        = "rhodawk-ai-code-stabilizer"
version     = "1.0.0"
description = "Rhodawk AI — Swarm-based autonomous code engineer. Targets 85%+ SWE-bench Verified."
readme      = "README.md"
requires-python = ">=3.11"
license     = { text = "MIT" }
keywords    = ["ai", "code-quality", "multi-agent", "swe-bench", "swarm", "autonomous"]

dependencies = [
    # ── Core LLM / agent stack
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "anthropic>=0.31.0",
    "openai>=1.40.0",
    "huggingface-hub>=0.24.0",
    # ── Swarm orchestration
    "langgraph>=0.2.0",
    "crewai>=0.80.0",
    "pyautogen>=0.3.0",
    # ── Data validation
    "pydantic>=2.7.0",
    # ── Database / storage
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # ── Vector store
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    # ── Web / API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    # ── Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # ── Metrics
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    # ── Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # ── CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # ── Environment
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    # ── GitHub
    "PyGithub>=2.3.0",
    # ── Source parsing
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=0.1.0",
    # ── Dependency graph
    "networkx>=3.3.0",
    "pyan3>=1.1.1",
    # ── Formal verification
    "z3-solver>=4.13.0",
    # ── Static analysis
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "semgrep>=1.70.0",
    # ── Resilience
    "tenacity>=8.3.0",
    # ── Security
    "cryptography>=42.0.0",
    # ── Tracing / observability
    "langsmith>=0.1.0",
    # ── MCP protocol
    "mcp>=1.0.0",
    # ── SBOM
    "cyclonedx-python-lib>=7.0.0",
]

[project.optional-dependencies]
# NOTE: datasets is required by swe_bench/evaluator.py at runtime,
# not just for benchmarking.  Listed here as optional for users who
# do not run benchmarks, but the evaluator will fail without it.
benchmark_runtime = ["datasets>=2.19.0", "evaluate>=0.4.0", "docker>=7.0.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
]
neo4j = ["neo4j>=5.20.0"]
postgres = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.9"]
benchmark = ["datasets>=2.19.0", "evaluate>=0.4.0", "docker>=7.0.0"]

[project.scripts]
rhodawk       = "scripts.cli:app"
rhodawk-bench = "scripts.benchmark:app"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
timeout      = 120
addopts      = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length    = 100
select         = ["E", "F", "W", "B", "I", "UP"]
ignore         = ["E501", "B008", "B904"]
exclude        = [".venv", "__pycache__", "*.pyc", "build", "dist"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_return_any        = true
disallow_untyped_defs  = false
strict_optional        = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B101"]
